--- a/layout1.css
+++ b/layout1.css
@@ -49,7 +49,7 @@ h1 {
   text-decoration: none;
 }
 #layout-menu a:hover {
-	color: navy;
+	color: #7FFFD4;
   text-decoration: none;
 }
 #layout-menu #page-source {
