--- a/xhtml11.css
+++ b/xhtml11.css
@@ -14,6 +14,13 @@ a {
   text-decoration: none;
    font-weight: bold;
 }
+
+a:hover {
+  color: #01796F;
+  text-decoration: underline;
+  font-weight: bold;
+}
+
 a:visited {
   color: #00A693;
     font-weight: bold;
@@ -175,8 +182,8 @@ div.admonitionblock .icon {
   vertical-align: top;
   font-size: 1.1em;
   font-weight: bold;
-  text-decoration: underline;
-  color: #527bbd;
+  text-decoration: none;
+  color:  #008080;
   padding-right: 0.5em;
 }
 div.admonitionblock td.content {
