--- a/xhtml11.css
+++ b/xhtml11.css
@@ -228,7 +228,7 @@ div.olist2 > ol {
 }
 
 div.tableblock > table {
-  border: 3px solid #527bbd;
+  border: 0px;
 }
 thead {
   font-family: sans-serif;
