Add special characters and fix typo in credits page

--- a/credits.css
+++ b/credits.css
@@ -27,5 +27,22 @@ h1  {
   border-bottom: 0px;
   color: black;
   }
+div#footer {
+  font-family: sans-serif;
+  font-size: small;
+  border-top: 2px black;
+  padding-top: 0.5em;
+  margin-top: 4.0em;
+}
+div#footer-text {
+  color: black;
+  float: left;
+  padding-bottom: 0.5em;
+}
+div#footer-badges {
+  float: right;
+  padding-bottom: 0.5em;
+}
+
 </style>
 ++++
