--- a/layout1.css
+++ b/layout1.css
@@ -9,6 +9,9 @@ h1 {
 
 #layout-banner {
 	background-color: #008080;
+	background-image: url("LLContest.png");
+  background-position: right;
+  background-repeat: no-repeat;
 	  border-bottom: 3px solid #eeeeee;
   color: #7FFFD4;
 	font-family: sans-serif;
@@ -17,10 +20,7 @@ h1 {
 }
 
 #layout-title {
-	background-image: url("/LLContest.png");
-  background-position: right;
-  background-repeat: no-repeat;
-  font-family: sans-serif;
+	font-family: sans-serif;
 	font-size: 3.5em;
 	font-weight: bold;
   letter-spacing: 0.2em;
