fixed the position of the logo

--- a/credits.css
+++ b/credits.css
@@ -29,12 +29,12 @@ body > table {
   margin-left: -400px;
 }
 
-div#layout-content div#preamble div.sectionbody div.para {
-  text-align: center;
+div#preamble, div.tableblock {
+  margin-right: auto;
 }
 
-div#preamble {
-  margin-right: auto;
+div#layout-content div#preamble div.sectionbody div.para {
+  text-align: center;
 }
 
 </style>
