--- a/layout2.css
+++ b/layout2.css
@@ -1,6 +1,32 @@
 body {
+  margin: 0;
+}
+
+#layout-banner-box {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 110px;
+  z-index: 2;
+	background-color: #73a0c5;
+}
+
+#layout-menu-box {
+  position: fixed;
+  left: 0px;
+  top: 110px;
+  width: 175px;
+  height: 100%;
+  z-index: 1;
+	background-color: #f4f4f4;
+}
+
+#layout-content-box {
+  position: relative;
+  margin-top: 110px;
+  margin-left: 175px;
 	background-color: white;
-  margin: 1%;
 }
 
 h1 {
@@ -8,7 +34,6 @@ h1 {
 }
 
 #layout-banner {
-	background-color: #73a0c5;
   color: white;
 	font-family: sans-serif;
 	text-align: left;
@@ -29,12 +54,12 @@ h1 {
 }
 
 #layout-menu {
-	background-color: #f4f4f4;
+  height: 100%;
   border-right: 3px solid #eeeeee;
   padding-top: 0.8em;
   padding-left: 20px;
   padding-right: 0.8em;
-	font-size: 1.1em;
+	font-size: 1.0em;
 	font-family: sans-serif;
 	font-weight: bold;
 }
@@ -56,10 +81,13 @@ h1 {
 }
 
 #layout-content {
-  margin-left: 1.0em;
+  padding-top: 0.2em;
+  padding-left: 1.0em;
+  padding-right: 0.4em;
 }
 
 @media print {
-  #layout-banner { display: none; }
-  #layout-menu { display: none; }
+  #layout-banner-box { display: none; }
+  #layout-menu-box { display: none; }
+  #layout-content-box { margin-top: 0; margin-left: 0; }
 }
