--- a/layout1.css
+++ b/layout1.css
@@ -7,7 +7,7 @@ h1 {
   margin-top: 0.5em;
 }
 
-#layout-banner {
+div#layout-banner {
 	background-color: #73a0c5;
   color: white;
 	font-family: sans-serif;
@@ -15,7 +15,7 @@ h1 {
   padding: 0.8em 20px;
 }
 
-#layout-title {
+div#layout-title {
 	font-family: monospace;
 	font-size: 3.5em;
 	font-weight: bold;
@@ -23,39 +23,41 @@ h1 {
   margin: 0;
 }
 
-#layout-description {
+div#layout-description {
 	font-size: 1.2em;
   letter-spacing: 0.1em;
 }
 
-#layout-menu {
+div#layout-menu {
 	background-color: #f4f4f4;
   border-right: 3px solid #eeeeee;
   padding-top: 0.8em;
   padding-left: 20px;
   padding-right: 0.8em;
+  margin-right: 1.0em;
 	font-size: 1.1em;
 	font-family: sans-serif;
 	font-weight: bold;
+ float: left;
 }
-#layout-menu a {
+div#layout-menu a {
   line-height: 2em;
   margin-left: 0.5em;
 }
-#layout-menu a:link, #layout-menu a:visited, #layout-menu a:hover {
+div#layout-menu a:link, #layout-menu a:visited, #layout-menu a:hover {
   color: #527bbd;
   text-decoration: none;
 }
-#layout-menu a:hover {
+div#layout-menu a:hover {
 	color: navy;
   text-decoration: none;
 }
-#layout-menu #page-source {
+div#layout-menu #page-source {
   border-top: 2px solid silver;
   margin-top: 0.2em;
 }
 
-#layout-content {
+div#layout-content {
   margin-left: 1.0em;
 }
 
