--- a/layout1.css
+++ b/layout1.css
@@ -40,6 +40,7 @@ div#layout-menu {
 	font-weight: bold;
  float: left;
 }
+div#layout-menu ul { padding: 0px; margin: 0px; list-style-type: none; }
 div#layout-menu a {
   line-height: 2em;
   margin-left: 0.5em;
