--- a/xhtml11.css
+++ b/xhtml11.css
@@ -1,281 +1,307 @@
-/* Debug borders */
-p, li, dt, dd, div, pre, h1, h2, h3, h4, h5, h6 {
-/*
-  border: 1px solid red;
+/* ---  css attributes order, delete unused attributes/values, --- 
+       misc. attributes @ bottom of list or next to related tag
+css {
+	display:;
+	visibilty:;
+	position:;
+	float:;
+	z-index:;
+	width:x;
+	height:y;
+	margin: top right bottom left;
+	padding: top right bottom left;
+	background: #colors url(deletethisvalue.foo) repeat scroll pos-x pos-y;
+	border: size color style;
+	outline: size color style;
+	font: style variant weight size/lineheight fontface1, fontface2, sans-serif; 
+	text-align:;
+	text-decoration:;
+}	
 */
-}
 
-a {
-  color: #01796F;
-  text-decoration: none;
-   font-weight: bold;
-}
-
-a:hover {
-  color: #01796F;
-  text-decoration: underline;
-  font-weight: bold;
-}
-
-a:visited {
-  color: #00A693;
-    font-weight: bold;
-}
-
-em {
-  font-style: italic;
-  color: #01796F;
-}
-
-strong {
-  font-weight: bold;
-  color: #0F3C3C;
-}
-
-tt {
-  color: #01796F;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  color: #5F9EA0;
-  font-family: sans-serif;
-  margin-top: 1.2em;
-  margin-bottom: 0.5em;
-  line-height: 1.3;
-}
-
-h1, h2, h3 {
-  border-bottom: 2px solid silver;
-}
-h2 {
-  padding-top: 0.5em;
-}
-h3 {
-  float: left;
-}
-h3 + * {
-  clear: left;
-}
+/* -------- Divs --------- */
 
 div.sectionbody {
-  font-family: serif;
-  margin-left: 0;
-}
-
-hr {
-  border: 1px solid silver;
-}
-
-p {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-}
-
-ul, ol, li > p {
-  margin-top: 0;
-}
-
-pre {
-  padding: 0;
-  margin: 0;
-}
-
-span#author {
-  color: #527bbd;
-  font-family: sans-serif;
-  font-weight: bold;
-  font-size: 1.1em;
-}
-span#email {
-}
-span#revision {
-  font-family: sans-serif;
-}
-
-div#footer {
-  font-family: sans-serif;
-  font-size: small;
-  border-top: 2px solid silver;
-  padding-top: 0.5em;
-  margin-top: 4.0em;
-}
-div#footer-text {
-  float: left;
-  padding-bottom: 0.5em;
-}
-div#footer-badges {
-  float: right;
-  padding-bottom: 0.5em;
+  	font-family: serif;
+  	margin-left: 0;
 }
 
 div#preamble,
 div.tableblock, div.imageblock, div.exampleblock, div.verseblock,
 div.quoteblock, div.literalblock, div.listingblock, div.sidebarblock,
 div.admonitionblock {
-  margin-right: 10%;
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
+ 	margin: 1.5em 10% 1.5em 0;
 }
+
 div.admonitionblock {
-  margin-top: 2.5em;
-  margin-bottom: 2.5em;
+	margin: 2.5em 0 2.5em 0;
 }
 
 div.content { /* Block element content. */
-  padding: 0;
+ 	padding: 0;
 }
 
 /* Block element titles. */
 div.title, caption.title {
-  color: #5F9EA0;
-  font-family: sans-serif;
-  font-weight: bold;
-  text-align: left;
-  margin-top: 1.0em;
-  margin-bottom: 0.5em;
+	margin: 1em 0 .5em 0;
+  	color: #5F9EA0;
+  	font: bold sans-serif;
+  	text-align: left;
 }
 div.title + * {
-  margin-top: 0;
+  	margin-top: 0;
 }
 
 td div.title:first-child {
-  margin-top: 0.0em;
+ 	 margin-top: 0.0em;
 }
+
 div.content div.title:first-child {
-  margin-top: 0.0em;
+  	margin-top: 0.0em;
 }
+
 div.content + div.title {
-  margin-top: 0.0em;
+  	margin-top: 0.0em;
 }
 
 div.sidebarblock > div.content {
-  background: #ffffee;
-  border: 1px solid silver;
-  padding: 0.5em;
+	padding: 0.5em;
+  	background: #ffffee;
+  	border: 1px solid silver;
 }
 
 div.listingblock {
-  margin-right: 0%;
+  	margin-right: 0%;
 }
+
 div.listingblock > div.content {
-  border: 1px solid silver;
-  background: #f4f4f4;
-  padding: 0.5em;
+	padding: 0.5em;
+  	background: #f4f4f4;
+	border: 1px solid silver;
 }
 
 div.quoteblock > div.content {
-  padding-left: 2.0em;
+  	padding-left: 2.0em;
 }
 
 div.attribution {
-  text-align: right;
+  	text-align: right;
 }
 div.verseblock + div.attribution {
-  text-align: left;
+  	text-align: left;
 }
 
 div.admonitionblock .icon {
-  vertical-align: top;
-  font-size: 1.1em;
-  font-weight: bold;
-  text-decoration: none;
-  color:  #008080;
-  padding-right: 0.5em;
+	padding-right: 0.5em;
+  	font: bold 1.1em;
+  	color: #008080;
+	text-decoration: none;
+	vertical-align: top;
 }
+
 div.admonitionblock td.content {
-  padding-left: 0.5em;
-  border-left: 2px solid silver;
+  	padding-left: 0.5em;
+  	border-left: 2px solid silver;
 }
 
 div.exampleblock > div.content {
-  border-left: 2px solid silver;
-  padding: 0.5em;
+  	padding: 0.5em;
+  	border-left: 2px solid silver;
 }
 
 div.verseblock div.content {
-  white-space: pre;
+  	white-space: pre;
 }
 
-div.imageblock div.content { padding-left: 0; }
-div.imageblock img { border: 0px solid silver; padding-left: 13%;}
-span.image img { border-style: none; }
+div.imageblock div.content { 
+	padding-left: 0; 
+	}
 
-dl {
-  margin-top: 0.8em;
-  margin-bottom: 0.8em;
+div.hlist {
+ 	margin: 0.8em 0 .8em 0;
 }
+
+/* -------- Text --------- */
+
+h1, h2, h3, h4, h5, h6 {
+	margin: 10px 0 .5em 0;
+  	color: #5F9EA0;
+  	font: sans-serif;
+  	line-height: 1.3;
+}
+
+h1, h2, h3 {
+ 	border-bottom: 2px solid silver;
+}
+
+h2 {
+  	padding-top: 0.5em;
+}
+
+h3 {
+  	float: left;
+}
+
+h3 + * {
+	clear: left;
+}
+
+p {
+	margin: .5em 0 .5em 0;
+}
+
+em {
+  	font-style: italic;
+  	color: #01796F;
+}
+
+strong {
+  	font-weight: bold;
+  	color: #0F3C3C;
+}
+
+tt {
+  	color: #01796F;
+}
+
+
+hr {
+  	border: 1px solid silver;
+}
+
+pre {
+  	padding: 0;
+  	margin: 0;
+}
+
+span#author {
+  	color: #527bbd;
+	font: bold 1.1em sans-serif;
+}
+
+span#email {
+	font: 1em monospace;
+}
+
+span#revision {
+  	font-family: sans-serif;
+}
+
+/* -------- Links -------- */
+
+a {
+  	color: #01796F;
+  	text-decoration: none;
+   	font-weight: bold;
+}
+
+a:hover {
+ 	color: #01796F;
+  	text-decoration: underline;
+  	font-weight: bold;
+}
+
+a:visited {
+  	color: #00A693;
+    font-weight: bold;
+}
+
+/* -------- Image -------- */
+
+span.image img { 
+	border-style: none; }
+	
+div.imageblock img { 
+	padding-left: 13%;	
+	border: 0px solid silver; 
+}
+	
+/* -------- Lists -------- */
+
+dl { 
+	margin: .8em 0 .8me 0;
+}
+
 dt {
-  margin-top: 0.5em;
-  margin-bottom: 0;
-  font-style: normal;
+	margin: .5em 0 0 0;
+  	font-style: normal;
 }
+
 dd > *:first-child {
-  margin-top: 0.1em;
+	margin-top: 0.1em;
 }
 
 ul, ol {
-    list-style-position: outside;
+   	list-style-position: outside;
 }
+
+ul, ol, li > p {
+  	margin-top: 0;
+}
+
 div.olist > ol {
-  list-style-type: decimal;
+  	list-style-type: decimal;
 }
+
 div.olist2 > ol {
-  list-style-type: lower-alpha;
+  	list-style-type: lower-alpha;
+}
+
+/* -------- Table -------- */
+div.hlist td {
+  	padding-bottom: 15px;
 }
 
 div.tableblock > table {
-  border: 0px;
-}
-thead {
-  font-family: sans-serif;
-  font-weight: bold;
-}
-tfoot {
-  font-weight: bold;
+  	border: 0px;
 }
 
-div.hlist {
-  margin-top: 0.8em;
-  margin-bottom: 0.8em;
+thead {
+  	font: bold sans-serif;
 }
-div.hlist td {
-  padding-bottom: 15px;
+tfoot {
+  	font-weight: bold;
 }
+
 td.hlist1 {
-  vertical-align: top;
-  font-style: normal;
-  padding-right: 0.8em;
+  	padding-right: 0.8em;
+  	font-style: normal;  	
+	vertical-align: top;
 }
 td.hlist2 {
-  vertical-align: top;
+  	vertical-align: top;
 }
 
 @media print {
-  div#footer-badges { display: none; }
+  	div#footer-badges { 
+		display: none; }
 }
 
+/* -------- Time of Creation --------- */
+
 div#toctitle {
-  color: #527bbd;
-  font-family: sans-serif;
-  font-size: 1.1em;
-  font-weight: bold;
-  margin-top: 1.0em;
-  margin-bottom: 0.1em;
+	margin: 1em 0 .1em 0;
+  	color: #527bbd;
+  	font: bold 1.1em sans-serif;
 }
 
 div.toclevel1, div.toclevel2, div.toclevel3, div.toclevel4 {
-  margin-top: 0;
-  margin-bottom: 0;
+  	margin: 0 0 0 0;
 }
 div.toclevel2 {
-  margin-left: 2em;
-  font-size: 0.9em;
+  	margin-left: 2em;
+  	font-size: 0.9em;
 }
 div.toclevel3 {
-  margin-left: 4em;
-  font-size: 0.9em;
+  	margin-left: 4em;
+  	font-size: 0.9em;
 }
 div.toclevel4 {
-  margin-left: 6em;
-  font-size: 0.9em;
+  	margin-left: 6em;
+  	font-size: 0.9em;
 }
+
+/* -------- Debug -------- */
+/*p, li, dt, dd, div, pre, h1, h2, h3, h4, h5, h6 {
+	border: red 1px solid;
+}  */
