Make links slightly more Blue to make them stand out more.

--- a/xhtml11.css
+++ b/xhtml11.css
@@ -190,7 +190,7 @@ span#revision {
 /* -------- Links -------- */
 
 a {
-  	color: #01796F;
+  	color: #0179AF;
   	text-decoration: none;
    	font-weight: bold;
 }
