--- a/menu.css
+++ b/menu.css
@@ -20,6 +20,12 @@ border-top: 3px solid #C4BCB0;
 background-color: #F4F4F4;
 padding: 2px 0 0;
 }
+/* second-level menu */
+#menu ul {
+background-color: #E1E1D0;
+padding: 0;
+margin: 3px 0 0;
+}
 /* expand buttons */
 #menu  .expand_button {
 float: right;
@@ -39,18 +45,22 @@ background-color:#ccc;
 #menu ul a:hover {
 background-color:#A3A585;
 }
+
+/* Current menu entry highlight */
+#menu ul .current,
+#menu ul .current li {
+	background-color: #D9E6F6;
+}
+#menu .current a {
+color: #1B3799;
+}
+
 /* all menu items */
 #menu li {
 display: block;
 margin: 0;
 }
 
-/* second-level menu */
-#menu ul {
-background-color: #E1E1D0;
-padding: 0;
-margin: 3px 0 0;
-}
 /* level-2 indentation */
 #menu ul {
 text-indent: 0.5em;
@@ -71,8 +81,5 @@ font-size: 14px;
 }
 #menu ul > li > a {
 display: block;
-}
-#menu .current {
-background-color: red;
 }
 
