--- a/menu.css
+++ b/menu.css
@@ -33,6 +33,8 @@ font-size: 8px;
 text-indent: 0;
 padding: 0 5px;
 cursor: s-resize;
+border: 1px solid #D9E6F6;
+background: white;
 }
 #menu a {
 font-weight: normal;
