more minor tweaks to the asciidoc stylesheet

--- a/css/page.css
+++ b/css/page.css
@@ -36,8 +36,8 @@ body {
 div#layout-banner {
 	margin: 5px 5px 0 5px;
 	padding: 0.4em 20px .2em 20px;
-	background: #73a0c5;
-	border-bottom: 10px #A9A38B solid;
+	background: #7097BF;
+	border-bottom: 9px #A9A38B solid;
  	color: white;
 	font: sans-serif;
 	text-align: left;
