adjust presentaton of asciidoc header metadata
- removed the 'version' line and put the date instead
- changed from using the Git-Date to using the date
  hard wired in the document header

--- a/css/asciidoc.css
+++ b/css/asciidoc.css
@@ -184,7 +184,11 @@ span#email {
 }
 
 span#revision {
-  	font-family: sans-serif;
+    font-family: sans-serif;
+}
+
+span#page_date {
+    font-size: smaller;
 }
 
 /* -------- Links -------- */
