--- a/css/asciidoc.css
+++ b/css/asciidoc.css
@@ -1,186 +1,199 @@
+@charset "utf-8";
+
+/* -------- CSS Document -------- */
+/*
+ * Lumiera.org Stylesheet
+ *
+ * for: Asciidoc generated content
+ */
+
+
 /* ---  css attributes order, delete unused attributes/values, --- 
        misc. attributes @ bottom of list or next to related tag
 css {
-	display:;
-	visibilty:;
-	position:;
-	float:;
-	z-index:;
-	width:x;
-	height:y;
-	margin: top right bottom left;
-	padding: top right bottom left;
-	background: #colors url(deletethisvalue.foo) repeat scroll pos-x pos-y;
-	border: size color style;
-	outline: size color style;
-	font: style variant weight size/lineheight fontface1, fontface2, sans-serif; 
-	text-align:;
-	text-decoration:;
-}	
+  display:;
+  visibilty:;
+  position:;
+  float:;
+  z-index:;
+  width:x;
+  height:y;
+  margin: top right bottom left;
+  padding: top right bottom left;
+  background: #colors url(deletethisvalue.foo) repeat scroll pos-x pos-y;
+  border: size color style;
+  outline: size color style;
+  font: style variant weight size/lineheight fontface1, fontface2, sans-serif; 
+  text-align:;
+  text-decoration:;
+}  
 */
 
-/* -------- Divs --------- */
 
+
+/* -------- Divs --------- */
 div.sectionbody {
-  	font-family: serif;
-  	margin-left: 0;
+    font-family: serif;
+    margin-left: 0;
 }
 
 div#preamble,
 div.tableblock, div.imageblock, div.exampleblock, div.verseblock,
 div.quoteblock, div.literalblock, div.listingblock, div.sidebarblock,
 div.admonitionblock {
- 	margin: 1.5em 10% 1.5em 0;
+    margin: 1.5em 10% 1.5em 0;
 }
 
 div.admonitionblock {
-	margin: 2.5em 0 2.5em 0;
+    margin: 2.5em 0 2.5em 0;
 }
 
 div.content { /* Block element content. */
- 	padding: 0;
+    padding: 0;
 }
 
 /* Block element titles. */
-div.title, caption.title {
-	margin: 1em 0 .5em 0;
-  	color: #6D86A6;
-  	font: bold sans-serif;
-  	text-align: left;
+div.title,caption.title {
+    margin: 1em 0 .5em 0;
+    color: #6D86A6;
+    font: bold sans-serif;
+    text-align: left;
 }
-div.title + * {
-  	margin-top: 0;
+
+div.title+* {
+    margin-top: 0;
 }
 
 td div.title:first-child {
- 	 margin-top: 0.0em;
+    margin-top: 0.0em;
 }
 
 div.content div.title:first-child {
-  	margin-top: 0.0em;
+    margin-top: 0.0em;
 }
 
-div.content + div.title {
-  	margin-top: 0.0em;
+div.content+div.title {
+    margin-top: 0.0em;
 }
 
-div.sidebarblock > div.content {
-	padding: 0.5em;
-  	background: #ffffee;
-  	border: 1px solid silver;
+div.sidebarblock>div.content {
+    padding: 0.5em;
+    background: #ffffee;
+    border: 1px solid silver;
 }
 
 div.listingblock {
-  	margin-right: 0%;
+    margin-right: 0%;
 }
 
-div.listingblock > div.content {
-	padding: 0.5em;
-  	background: #f4f4f4;
-	border: 1px solid silver;
+div.listingblock>div.content {
+    padding: 0.5em;
+    background: #f4f4f4;
+    border: 1px solid silver;
 }
 
-div.quoteblock > div.content {
-  	padding-left: 2.0em;
+div.quoteblock>div.content {
+    padding-left: 2.0em;
 }
 
 div.attribution {
-  	text-align: right;
+    text-align: right;
 }
-div.verseblock + div.attribution {
-  	text-align: left;
+
+div.verseblock+div.attribution {
+    text-align: left;
 }
 
 div.admonitionblock .icon {
-	padding-right: 0.5em;
-  	font: bold 1.1em;
-  	color: #008080;
-	text-decoration: none;
-	vertical-align: top;
+    padding-right: 0.5em;
+    font: bold 1.1em;
+    color: #008080;
+    text-decoration: none;
+    vertical-align: top;
 }
 
 div.admonitionblock td.content {
-  	padding-left: 0.5em;
-  	border-left: 2px solid silver;
+    padding-left: 0.5em;
+    border-left: 2px solid silver;
 }
 
-div.exampleblock > div.content {
-  	padding: 0.5em;
-  	border-left: 2px solid silver;
+div.exampleblock>div.content {
+    padding: 0.5em;
+    border-left: 2px solid silver;
 }
 
 div.verseblock div.content {
-  	white-space: pre;
+    white-space: pre;
 }
 
-div.imageblock div.content { 
-	padding-left: 0; 
-	}
+div.imageblock div.content {
+    padding-left: 0;
+}
 
 div.hlist {
- 	margin: 0.8em 0 .8em 0;
+    margin: 0.8em 0 .8em 0;
 }
+
+
 
 /* -------- Text --------- */
-
-h1, h2, h3, h4, h5, h6 {
-	margin: 10px 0 .5em 0;
-  	color: #6D86A6;
-  	font: sans-serif;
-  	line-height: 1.3;
+h1,h2,h3,h4,h5,h6 {
+    margin: 10px 0 .5em 0;
+    color: #6D86A6;
+    font: sans-serif;
+    line-height: 1.3;
 }
 
-h1, h2, h3 {
- 	border-bottom: 2px solid silver;
+h1,h2,h3 {
+    border-bottom: 2px solid silver;
 }
 
 h2 {
-  	padding-top: 0.5em;
+    padding-top: 0.5em;
 }
 
 h3 {
-  	float: left;
+    float: left;
 }
 
-h3 + * {
-	clear: left;
+h3+* {
+    clear: left;
 }
 
 p {
-	margin: .5em 0 .5em 0;
+    margin: .5em 0 .5em 0;
 }
 
 em {
-  	font-style: italic;
-  	color: #475F6A;
+    font-style: italic;
+    color: #475F6A;
 }
 
 strong {
-  	font-weight: bold;
-  	color: #323B4A;
+    font-weight: bold;
+    color: #323B4A;
 }
 
 tt {
-  	color: #475F6A;
+    color: #475F6A;
 }
 
-
 hr {
-  	border: 1px solid silver;
+    border: 1px solid silver;
 }
 
 pre {
-  	padding: 0;
-  	margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 span#author {
-  	color: #475F6A;
-	font: bold 1.1em sans-serif;
+    color: #475F6A;
+    font: bold 1.1em sans-serif;
 }
 
 span#email {
-	font: 1em monospace;
+    font: 1em monospace;
 }
 
 span#revision {
@@ -191,121 +204,134 @@ span#page_date {
     font-size: smaller;
 }
 
+
+
 /* -------- Links -------- */
-
 a {
-  	color: #3D5278;
-  	text-decoration: none;
-   	font-weight: bold;
-}
-
-a:hover {
- 	color: #4E5E78;
-  	text-decoration: underline;
-  	font-weight: bold;
-}
-
-a:visited {
-  	color: #4E5E78;
+    color: #3D5278;
+    text-decoration: none;
     font-weight: bold;
 }
 
-/* -------- Image -------- */
-
-span.image img { 
-	border-style: none; }
-	
-div.imageblock img { 
-	padding-left: 13%;	
-	border: 0px solid silver; 
+a:hover {
+    color: #4E5E78;
+    text-decoration: underline;
+    font-weight: bold;
 }
-	
-/* -------- Lists -------- */
 
-dl { 
-	margin: .8em 0 .8em 0;
+a:visited {
+    color: #4E5E78;
+    font-weight: bold;
+}
+
+
+
+/* -------- Image -------- */
+span.image img {
+    border-style: none;
+}
+
+div.imageblock img {
+    padding-left: 13%;
+    border: 0px solid silver;
+}
+
+
+
+/* -------- Lists -------- */
+dl {
+    margin: .8em 0 .8em 0;
 }
 
 dt {
-	margin: .5em 0 0 0;
-  	font-style: normal;
+    margin: .5em 0 0 0;
+    font-style: normal;
 }
 
-dd > *:first-child {
-	margin-top: 0.1em;
+dd>*:first-child {
+    margin-top: 0.1em;
 }
 
-ul, ol {
-   	list-style-position: outside;
+ul,ol {
+    list-style-position: outside;
 }
 
-ul, ol, li > p {
-  	margin-top: 0;
+ul,ol,li>p {
+    margin-top: 0;
 }
 
-div.olist > ol {
-  	list-style-type: decimal;
+div.olist>ol {
+    list-style-type: decimal;
 }
 
-div.olist2 > ol {
-  	list-style-type: lower-alpha;
+div.olist2>ol {
+    list-style-type: lower-alpha;
 }
+
+
 
 /* -------- Table -------- */
 div.hlist td {
-  	padding-bottom: 15px;
+    padding-bottom: 15px;
 }
 
-div.tableblock > table {
-  	border: 0px;
+div.tableblock>table {
+    border: 0px;
 }
 
 thead {
-  	font: bold sans-serif;
+    font: bold sans-serif;
 }
+
 tfoot {
-  	font-weight: bold;
+    font-weight: bold;
 }
 
 td.hlist1 {
-  	padding-right: 0.8em;
-  	font-style: normal;  	
-	vertical-align: top;
+    padding-right: 0.8em;
+    font-style: normal;
+    vertical-align: top;
 }
+
 td.hlist2 {
-  	vertical-align: top;
+    vertical-align: top;
 }
 
 @media print {
-  	div#footer-badges { 
-		display: none; }
+    div#footer-badges {
+        display: none;
+    }
 }
+
+
 
 /* -------- Time of Creation --------- */
-
 div#toctitle {
-	margin: 1em 0 .1em 0;
-  	color: #527bbd;
-  	font: bold 1.1em sans-serif;
+    margin: 1em 0 .1em 0;
+    color: #527bbd;
+    font: bold 1.1em sans-serif;
 }
 
-div.toclevel1, div.toclevel2, div.toclevel3, div.toclevel4 {
-  	margin: 0 0 0 0;
+div.toclevel1,div.toclevel2,div.toclevel3,div.toclevel4 {
+    margin: 0 0 0 0;
 }
+
 div.toclevel2 {
-  	margin-left: 2em;
-  	font-size: 0.9em;
+    margin-left: 2em;
+    font-size: 0.9em;
 }
+
 div.toclevel3 {
-  	margin-left: 4em;
-  	font-size: 0.9em;
+    margin-left: 4em;
+    font-size: 0.9em;
 }
+
 div.toclevel4 {
-  	margin-left: 6em;
-  	font-size: 0.9em;
+    margin-left: 6em;
+    font-size: 0.9em;
 }
 
 /* -------- Debug -------- */
 /*p, li, dt, dd, div, pre, h1, h2, h3, h4, h5, h6 {
-	border: red 1px solid;
+  border: red 1px solid;
 }  */
