--- a/css/menu.css
+++ b/css/menu.css
@@ -54,14 +54,7 @@
     background-color: #A3A585;
 }
 
-/* Current menu entry highlight */
-#menu ul .current,#menu ul .current li {
-    background-color: #D9E6F6;
-}
 
-#menu .current a {
-    color: #1B3799;
-}
 
 /* all menu items */
 #menu li {
@@ -102,4 +95,22 @@
 
 #menu ul>li>a {
  /* nothing special */
+}
+
+
+/* ---Current-entry-highlight---*/
+#menu li.current {
+    background-color: #D9E6F6;
+}
+#menu .submenu.current > ul {
+    border-top: 3px solid #D9E6F6;
+}
+#menu .current a {
+    color: #1B3799;
+}
+
+
+/* ---Expanding/Collapsing--- */
+#menu .collapsed > ul {
+   display: none;
 }
