make menu display and borders a bit more consistent

--- a/css/asciidoc.css
+++ b/css/asciidoc.css
@@ -102,7 +102,7 @@ div.sidebarblock {
     float:right;
     width: 50ex;
     margin: 1.5em -30ex 1.5em 2ex;
-    border: 1px solid #84404E;"
+    border: 1px solid #84404E;
 }
 div.sidebarblock>div.content {
     padding: 0.5em 1em;
