--- a/css/jquery.treeview.css
+++ b/css/jquery.treeview.css
@@ -31,9 +31,9 @@
 	background-color: #eee;
 }
 
-#treecontrol { margin: 1em 0; display: none; }
+#treecontrol {margin: 1em 0; display: none; }
 
-.treeview .hover { color: red; cursor: pointer; }
+.treeview .hover { cursor: pointer; }
 
 .treeview li { background: url(images/treeview-default-line.gif) 0 0 no-repeat; }
 .treeview li.collapsable, .treeview li.expandable { background-position: 0 -176px; }
