--- a/css/menu.css
+++ b/css/menu.css
@@ -10,35 +10,32 @@
 
 /* --------v  Menu  v-------- */
 #menu {
-    font: 16px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    padding: 0;
-    border-bottom: 3px solid #C4BCB0;
+    font: 15px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    padding: 0 0 0 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+    position: relative;
 }
 
 /* main menu items */
 #menu li.submenu {
     border-top: 3px solid #C4BCB0;
-    background-color: #F4F4F4;
     padding: 2px 0 0;
-}
-
-/* Submenu-items */
-#menu ul>li {
-    border-top: 2px solid #CFC5B2;
-    font-size: 14px;
 }
 
 /* second-level menu */
 #menu ul {
-    border-top: 1px solid #CFC5B2;
-    background-color: #E1DED0;
-    margin: 3px 0 0;
     padding: 0;
+    margin: 3px 0 0;
+    position: absolute;
+    text-transform: none;
+    font-weight: normal;
+    font-size: 12px;
+    margin-top: 24px;
 }
 
-
 /* expand buttons */
-#menu  .expand_button {
+#menu .expand_button {
     float: right;
     font-size: 8px;
     text-indent: 0;
@@ -49,30 +46,49 @@
 }
 
 #menu a {
-    font-weight: normal;
-    color: #333;
+    font-weight: bold;
+    color: #DDD;
+    text-decoration: none;
 }
 
 #menu a:hover {
     text-decoration: none;
-    background-color: #ccc;
+    color: #FFF;
+}
+
+#menu ul a {
+	font-weight: normal;
 }
 
 #menu ul a:hover {
-    background-color: #A3A585;
+    
+}
+
+#menu ul li {
+	margin-right: 25px;
+	color: #CCC;
 }
 
 
 
+/* Current menu entry highlight */
+#menu ul .current,#menu ul .current li {
+    background-color: #D9E6F6;
+}
+
+#menu .current a {
+    color: #1B3799;
+}
+
 /* all menu items */
 #menu li {
-    display: block;
-    margin: 0;
+    display: inline;
+    margin: 0 25px 0 0;
 }
 
 /* level-2 indentation */
 #menu ul {
-    text-indent: 0.5em;
+    /*text-indent: 0.5em;*/
 }
 
 /* level-3 indentation */
@@ -101,27 +117,65 @@
 }
 
 
-/* ---Current-entry-highlight---*/
-#menu li.current {
-    background-color: #D9E6F6;
-}
-#menu .submenu.current > ul > li {
-    background-color: #F4F4F4;
-    border-top-color: #CED5DE;
-}
-#menu .current a {
-    color: #1B3799;
+
+/* Vertical menu */
+
+#menu_v {
+    font: 13px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    padding: 0 0 0 3px;
+    text-transform: none;
+    font-weight: bold;
+    position: relative;
 }
 
 
-/* ---Expanding/Collapsing--- */
-#menu .collapsed > ul {
-   display: none;
+/* second-level menu */
+#menu_v ul {
+    padding: 0 0 0 0;
+    margin: 3px 0 0;
+    text-transform: none;
+    font-weight: bold;
+    font-size: 12px;
 }
-#menu li.submenu.collapsed {
-    border-top: 2px solid #CFC5B2;
-    background-color: #E1DED0;
-    padding: 0;
-    font-size: 14px;
-}/* style them like normal entries */
+
+/* expand buttons */
+#menu_v .expand_button {
+    float: right;
+    font-size: 8px;
+    text-indent: 0;
+    padding: 0 5px;
+    cursor: s-resize;
+    border: 1px solid #D9E6F6;
+    background: white;
+}
+
+#menu_v a {
+    font-weight: bold;
+    color: #333;
+    text-decoration: none;
+ 
+}
+
+#menu_v a:hover {
+    text-decoration: none;
+    color: #666;
+}
+
+#menu_v li {
+    display: block;
+    margin: 0 0 0 0;
+    color: #333;
+}
+
+#menu_v ul a {
+	font-weight: bold;
+}
+
+#menu_v ul a:hover {
+}
+  
+#menu_v ul ul a {
+	font-weight: normal;
+}  
+
 
