--- a/css/asciidoc.css
+++ b/css/asciidoc.css
@@ -43,6 +43,13 @@ div.quoteblock, div.literalblock, div.listingblock {
     margin: 1.5em 10% 1.5em 0;
 }
 
+div.compact ul, div.compact ol,
+div.compact p, div.compact p,
+div.compact div, div.compact div {
+  margin-top: 0.1em;
+  margin-bottom: 0.1em;
+}
+
 div.admonitionblock {
     margin: 2.5em 0 2.5em 0;
 }
@@ -194,6 +201,52 @@ pre {
     margin: 0;
 }
 
+/* ------ Color and Decoration ------- */
+
+span.aqua { color: aqua; }
+span.black { color: black; }
+span.blue { color: blue; }
+span.navy { color: navy; }
+span.fuchsia { color: fuchsia; }
+span.gray { color: gray; }
+span.green { color: green; }
+span.lime { color: lime; }
+span.teal { color: teal; }
+span.maroon { color: maroon; }
+span.olive { color: olive; }
+span.purple { color: purple; }
+span.red { color: red; }
+span.orange { color: orange; }
+span.yellow { color: yellow; }
+span.silver { color: silver; }
+span.white { color: white; }
+
+span.aqua-background { background: aqua; }
+span.black-background { background: black; }
+span.blue-background { background: blue; }
+span.navy-background { background: navy; }
+span.fuchsia-background { background: fuchsia; }
+span.gray-background { background: gray; }
+span.green-background { background: green; }
+span.lime-background { background: lime; }
+span.teal-background { background: teal; }
+span.maroon-background { background: maroon; }
+span.olive-background { background: olive; }
+span.purple-background { background: purple; }
+span.red-background { background: red; }
+span.orange-background { background: orange; }
+span.yellow-background { background: yellow; }
+span.silver-background { background: silver; }
+span.white-background { background: white; }
+
+span.big { font-size: 2em; }
+span.small { font-size: 0.6em; }
+
+span.underline { text-decoration: underline; }
+span.overline { text-decoration: overline; }
+span.line-through { text-decoration: line-through; }
+
+
 span#author {
     color: #475F6A;
     font: bold 1.1em sans-serif;
@@ -253,6 +306,7 @@ dl {
 dt {
     margin: .5em 0 0 0;
     font-style: normal;
+    color: #323B4A;
 }
 
 dd>*:first-child {
@@ -273,6 +327,22 @@ div.olist>ol {
 
 div.olist2>ol {
     list-style-type: lower-alpha;
+}
+
+ol.arabic {
+  list-style-type: decimal;
+}
+ol.loweralpha {
+  list-style-type: lower-alpha;
+}
+ol.upperalpha {
+  list-style-type: upper-alpha;
+}
+ol.lowerroman {
+  list-style-type: lower-roman;
+}
+ol.upperroman {
+  list-style-type: upper-roman;
 }
 
 
